# nukeD

./: .gitignore  AI_USAGE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
completions/zsh/: _nuked
scripts/: demo_fixture.sh  install.sh  release.sh  release_linux.sh  update_tap.sh
src/: age.rs  cache.rs  cleanup.rs  display.rs  fuzzy.rs  main.rs  profiles.rs  report.rs  scanner.rs  tui.rs
vhs/: nuked-demo.tape
