[package]
name = "nuked"
version = "1.3.1"
edition = "2024"
description = "Nuke stale project dependency folders."
license = "GPL-3.0"
homepage = "https://github.com/mmiraly/nukeD"
repository = "https://github.com/mmiraly/nukeD"
readme = "README.md"

[[bin]]
name = "nuked"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "6"
globset = "0.4"
humansize = "2"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
trash = "5"
walkdir = "2"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
